# learn-comms

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PlotResults.m  README.md  comms_82.config  comms_82.result  comms_g.config  comms_good.config  datacomms.result  findmin.py  fix_paths.py  fix_paths_sjg.py  load_results.py  notes  optimizer.py  plot_convergence.py  plot_cross_validation.py  plot_particle_scores.py  pso_opt.py  rebuild  rebuild.py  recalc_convergence.py  record.txt  test_async.py
data/: comms.config  comms.result  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t101.config  comms_t101.result  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t11.result  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.result  comms_t115.config  comms_t115.result  comms_t116.result  comms_t117.result  comms_t118.config  comms_t118.result  comms_t12.result  comms_t120.config  comms_t120.result  comms_t121.config  comms_t121.result  comms_t122.config  comms_t124.result  (+1011 more)
data_t0/: comms.result  comms_t1.config  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t100.result  comms_t1000.config  comms_t1000.result  comms_t101.config  comms_t101.result  comms_t102.config  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.config  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t106.result  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t109.result  comms_t11.config  comms_t11.result  comms_t110.config  comms_t110.result  comms_t111.config  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.config  comms_t114.result  comms_t115.config  (+1956 more)
data_t1/: comms.result  comms_t1.config  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t100.result  comms_t1000.config  comms_t1000.result  comms_t1001.result  comms_t101.config  comms_t101.result  comms_t102.config  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.config  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t106.result  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t109.result  comms_t11.config  comms_t11.result  comms_t110.config  comms_t110.result  comms_t111.config  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.config  comms_t114.result  (+1961 more)
data_t2/: comms_t1.config  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t100.result  comms_t1000.config  comms_t1000.result  comms_t1001.config  comms_t101.config  comms_t101.result  comms_t102.config  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.config  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t106.result  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t109.result  comms_t11.config  comms_t11.result  comms_t110.config  comms_t110.result  comms_t111.config  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.config  comms_t114.result  comms_t115.config  (+1961 more)
data_t3/: comms.config  comms.result  comms_t1.config  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t100.result  comms_t1000.config  comms_t1000.result  comms_t101.config  comms_t101.result  comms_t102.config  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.config  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t106.result  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t109.result  comms_t11.config  comms_t11.result  comms_t110.config  comms_t110.result  comms_t111.config  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.config  comms_t114.result  (+1961 more)
data_t5/: comms.result  comms_t1.config  comms_t1.result  comms_t10.config  comms_t10.result  comms_t100.config  comms_t100.result  comms_t1000.config  comms_t101.config  comms_t101.result  comms_t102.config  comms_t102.result  comms_t103.config  comms_t103.result  comms_t104.config  comms_t104.result  comms_t105.config  comms_t105.result  comms_t106.config  comms_t106.result  comms_t107.config  comms_t107.result  comms_t108.config  comms_t108.result  comms_t109.config  comms_t109.result  comms_t11.config  comms_t11.result  comms_t110.config  comms_t110.result  comms_t111.config  comms_t111.result  comms_t112.config  comms_t112.result  comms_t113.config  comms_t113.result  comms_t114.config  comms_t114.result  comms_t115.config  comms_t115.result  (+1957 more)
data_t6/: comms.result  comms_t1.config  comms_t100.result  comms_t1000.config  comms_t1000.result  comms_t102.config  comms_t104.config  comms_t106.result  comms_t109.result  (+941 more)
enginee/: .gitignore  CMakeLists.txt
enginee/lib/: init.sh
enginee/src/: Camera.cpp  Camera.h  Entity.h  Pool.cpp  Pool.h  Transform.cpp  Transform.h  Viewport.h  io.cpp  io.h  main.cpp  render.cpp  render.h  ui.cpp  ui.h
enginee/src/ai/: Agent.h  BVH.cpp  BVH.h  BoundVolume.cpp  BoundVolume.h  Dynamics.h  GMP.cpp  GMP.h  LMP.cpp  LMP.h  PRM.cpp  PRM.h  ai.cpp  ai.h  physics.cpp  physics.h
enginee/src/comms/: CommComp.h  comm.cpp  comm.h
enginee/src/demo/: demo.cpp  demo.h
enginee/src/light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h
enginee/src/model/: CubeMesh.cpp  CubeMesh.h  CylinderMesh.cpp  CylinderMesh.h  LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h
enginee/src/util/: Graph.h  Seeder.cpp  Seeder.h  Timer.cpp  Timer.h  debug.cpp  debug.h
(+4 files in other folders)
